--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,38 @@ h1 {
     text-align: center;
 }
 
-.library {
+body {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+
+.library {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
 }
 
 .card {
     border: 1px solid black;
+    text-align: center;
+    min-width: 100px;
+}
+
+button {
+    display: block;
+    margin: 20 auto;
+}
+
+.formContainer {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    border: 1px solid red;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    padding: 20px;
+    background-color: aqua;
+    top: 100px;
 }
