--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,13 @@ body {
 
 .library {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+@media screen and (max-width: 600px) {
+    .library {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .card {
@@ -28,12 +33,19 @@ button {
 .formContainer {
     display: none;
     position: absolute;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
     border: 1px solid red;
-    border-radius: 20px;
     text-align: center;
     font-size: 20px;
     padding: 20px;
     background-color: aqua;
     top: 100px;
+    width: 250px;
+}
+
+.formContainer *:not(label, #read){
+    margin: 10px;
+    flex-basis: 100%;
 }
